--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <input type = "password" placeholder="Password" />
         <input type = "submit" value = "Log In" />
         <a href = "#">Find CoCoa Account or Password</a>
+        <br>
+        <a href = "https://sangjinhan1998.github.io/RealClone002/">Move to Github Server</a>
     </form>
 
 
