--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <input type = "submit" value = "Log In" />
         <a href = "#">Find CoCoa Account or Password</a>
         <br>
-        <a href = "https://sangjinhan1998.github.io/Realclone001/">Move to Github Server</a>
+        <a href = "https://sangjinhan1998.github.io/Realclone001/">1</a>
+        <a href = "https://sangjinhan1998.github.io/Realclone002/">2</a>
+
     </form>
 
 
