--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a href = "#">Find CoCoa Account or Password</a>
         <br>
         <a href = "https://sangjinhan1998.github.io/Realclone001/">1</a>
-        <a href = "https://sangjinhan1998.github.io/Realclone002/">2</a>
+        <a href = "https://sangjinhan1998.github.io/RealClone002/">2</a>
 
     </form>
 
