--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
         <input type = "submit" value = "Log In" />
         <a href = "#">Find CoCoa Account or Password</a>
         <br>
-        <a href = "https://sangjinhan1998.github.io/Realclone001/">1</a>
-        <a href = "https://sangjinhan1998.github.io/RealClone002/">2</a>
+        <center>
+        <ul>
+            <li><a href = "https://sangjinhan1998.github.io/Realclone001/">1</a></div></li>
+            <li><a href = "https://sangjinhan1998.github.io/RealClone002/">2</a></div></li>
+        </ul>
+        </center>
 
     </form>
 
